使用拦截器给 ttl 传递参数